[tool.poetry]
name = "snipwizard"
version = "0.1.0"
description = ""
authors = ["Samuel DSR <samuel.longshihe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.4.0,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
